# prim_int_kind

./: Cargo.toml  README.md
src/: from_str.rs  lib.rs  to_prim_int_kind.rs
